sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: type int
 var ecart:int =(getNombreValeurs)/2
           ^